Update export views for data tables(disaster,political,etc)

--- a/databank/general_data/templates/general_data/disaster_templates/disaster_table.html
+++ b/databank/general_data/templates/general_data/disaster_templates/disaster_table.html
@@ -172,7 +172,7 @@
               <span class="fw-normal">Delete Selected</span>
           </button>
             <a
-              href="{% url 'export_forest_table_to_excel' %}?{{ request.GET.urlencode }}"
+              href="{% url 'export_disaster_table_to_excel' %}?{{ request.GET.urlencode }}"
               class="border p-2 styled-link"
             >
             <i class="fa-solid fa-table"></i>
@@ -197,7 +197,7 @@
               Country
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Disaster_Code
+                Disaster_id
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Human_Loss
