--- a/databank/general_data/templates/general_data/mining_templates/mining_table.html
+++ b/databank/general_data/templates/general_data/mining_templates/mining_table.html
@@ -167,7 +167,7 @@
         <div class="d-flex align-items-center py-2">
           <button type="button" class="btn border p-2 styled-link mx-3 hover-shadow" onclick="confirmDeleteAll()">
             <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
-              <span class="fw-normal">Delete Selected</span>
+              <span class="fw-normal">Delete Selected </span>
           </button>
             <a
               href="{% url 'export_mining_table_to_excel' %}?{{ request.GET.urlencode }}"
@@ -195,7 +195,7 @@
               Country
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Name_Of_The_Mine
+                Name_Of_Mine
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Unit
