--- a/databank/general_data/templates/general_data/health_disease_templates/health_disease_table.html
+++ b/databank/general_data/templates/general_data/health_disease_templates/health_disease_table.html
@@ -27,7 +27,7 @@
 
     <div class="collapse shadow rounded-2 " id="collapseFilter">
       <div class="px-2 py-2"> 
-        <form class="row" method="GET" action="./health_disease_table">
+        <form class="row" method="GET" action="./health_diseases_table">
     
           <div class="col-md-3">
             <label for="date_minimum">Calender Date Minimum</label>
