--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -76,6 +76,9 @@
                 <a class="dropdown-item" href="{% url 'upload_disaster_excel' %}">Upload Disaster Data</a>
               </li>
               <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_health_diseases_excel' %}">Upload Health Disease Data</a>
+              </li>
+              <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_climate_excel' %}">Upload Climate Data</a>
               </li>
             </ul>
