--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -75,6 +75,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_climate_excel' %}">Upload Climate Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_exchange_excel' %}">Upload Exchange Data</a>
+              </li>
             </ul>
           </li>
 
