--- a/databank/general_data/templates/general_data/exchange_templates/exchange_table.html
+++ b/databank/general_data/templates/general_data/exchange_templates/exchange_table.html
@@ -79,7 +79,7 @@
                         <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
                         <span>Delete Selected</span>
                     </button>
-                    <a href="{% url 'export_climate_excel' %}?{{ request.GET.urlencode }}"
+                    <a  href="{% url 'export_exchange_excel' %}?{{ request.GET.urlencode }}""
                         class="border p-2 styled-link">
                         <i class="fa-solid fa-table"></i>
                         <span class="fw-normal">Export to Excel</span>
