forest view update

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -79,8 +79,12 @@
                 <a class="dropdown-item" href="{% url 'upload_health_diseases_excel' %}">Upload Health Disease Data</a>
               </li>
               <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_housing_excel' %}">Upload Housing Data</a>
+              </li>
+              <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_climate_excel' %}">Upload Climate Data</a>
               </li>
+
             </ul>
           </li>
 
