--- a/databank/general_data/templates/general_data/energy_templates/energy_table.html
+++ b/databank/general_data/templates/general_data/energy_templates/energy_table.html
@@ -6,6 +6,58 @@
     Filters
 </button>
 
+<div class="bg-light mt-3">
+    <div class="collapse shadow rounded-2" id="collapseFilter">
+        <div class="px-2 py-2">
+            <form action="" method="GET" class="row g-3">
+                <div class="form-group col-md-3  ">
+                    <label for="power_code"> Power Code</label>
+                    <select id="power_code" class=" form-control" name="power_code">
+                        <option selected>--</option>
+                        {% for code in power_code_categories %}
+                        <option class="" value="{{code.id}}">{{code.Code}} - {{code.Energy_Type}} </option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="country"> Country</label>
+                    <select id="country" class="form-control" name="country">
+                        <option selected>--</option>
+                        {% for country in country_categories %}
+                        <option value="{{country.id}}">{{country.Country_Name}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+
+                <div class="form-group col-md-3">
+                    <label for="potential_unit"> Potential Unit</label>
+                    <select id="potential_unit" class="form-control" name="potential_unit">
+                        <option selected>--</option>
+                        {% for unit in unit_categories %}
+                        <option value="{{unit.id}}">{{unit.Unit_Code}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+
+                <div class="form-group col-md-3">
+                    <label for="unit_production"> Unit Production</label>
+                    <select id="unit_production" class="form-control" name="unit_production">
+                        <option selected>--</option>
+                        {% for unit in unit_categories %}
+                        <option value="{{unit.id}}">{{unit.Unit_Code}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="col-md-3 d-flex align-items-end">
+                    <button type="submit" class="btn btn-primary">
+                        Search
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <div class="d-flex justify-content-center">
     <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
         href="{% url 'energy_table' %}">Energy Data</a>
@@ -16,7 +68,7 @@
     No Records
 </div>
 {% else %}
-<form action="" method="post">
+<form action="{% url 'delete_selected_energy' %} " method="post" id="delete-form">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light p-3">
         <div class="d-flex align-items-ceter justify-content-between px-2">
@@ -35,88 +87,165 @@
                 </a>
             </div>
         </div>
-        <table class="table table-striped table-bordered table-sm w-100">
-            <thead>
-                <tr>
-                    <th class="text-white fw-semibold fs-6" scope="col" style="background: #12486B;">
-                        <input type="checkbox" name="" id="select-all" onclick="toggleSelectAll()">
-                    </th>
+        <div>
+            <table class="table table-striped table-bordered table-sm w-100">
+                <thead>
+                    <tr>
+                        <th class="text-white fw-semibold fs-6" scope="col" style="background: #12486B;">
+                            <input type="checkbox" name="" id="select-all" onclick="toggleSelectAll()">
+                        </th>
 
-                    <th class="text-white fst-normal  " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                        Year
-                    </th>
-                    <th class="text-white fst-normal  " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                        Country
-                    </th>
-                    <th class="text-white fst-normal  " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                        Power Code
-                    </th>
-                    <th class="text-white fst-normal  " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                        Energy_Type
-                    </th>
-                    <th class="text-white fst-normal  " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                        Potential Unit
-                    </th>
-                    <th class="text-white fst-normal  " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                        Potential Capacity MW
-                    </th>
-                    <th class="text-white fst-normal  " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                        Unit Production
-                    </th>
-                    <th class="text-white fst-normal  " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                        Current Production In MW
-                    </th>
-                    <th class="text-white fst-normal  " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                        Generating Company
-                    </th>
-                    <th class="text-white fst-normal " scope="col"
-                        style="font-size:14px; font-weight: 500; background: #12486B;" scope=" col">
-                        Action
-                    </th>
-                </tr>
-            </thead>
-            <tbody class="table-hover">
-                {% for record in page %}
-                <tr>
-                    <td class="text-white fw-semibold fs-6" scope="col">
-                        <input type="checkbox" name="selected_items" class="item-checkbox" value="{{record.id}}" />
-                    </td>
-                    <td>{{ record.Year }}  </td>
-                    <td> {{record.Country.Country_Name}} </td>
-                    <td> {{record.Power_Code.Code}} </td>
-                    <td> {{record.Power_Code.Energy_Type}}</td>
-                    <td> {{record.Potential_Unit.Unit_Code}} </td>
-                    <td> {{record.Potential_Capacity_MW}} </td>
-                    <td> {{record.Unit_Production.Unit_Code}} </td>
-                    <td> {{record.Current_Production_In_MW}} </td>
-                    <td> {{record.Generating_Company}} </td>
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                            Year
+                        </th>
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                            Country
+                        </th>
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                            Power Code
+                        </th>
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                            Energy_Type
+                        </th>
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                            Potential Unit
+                        </th>
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                            Potential Capacity MW
+                        </th>
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                            Unit Production
+                        </th>
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                            Current Production In MW
+                        </th>
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                            Generating Company
+                        </th>
+                        <th class="text-white fst-normal " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope=" col">
+                            Action
+                        </th>
+                    </tr>
+                </thead>
+                <tbody class="table-hover">
+                    {% for record in page %}
+                    <tr>
+                        <td class="text-white fw-semibold fs-6" scope="col">
+                            <input type="checkbox" name="selected_items" class="item-checkbox" value="{{record.id}}" />
+                        </td>
+                        <td>{{ record.Year }} </td>
+                        <td> {{record.Country.Country_Name}} </td>
+                        <td> {{record.Power_Code.Code}} </td>
+                        <td> {{record.Power_Code.Energy_Type}}</td>
+                        <td> {{record.Potential_Unit.Unit_Code}} </td>
+                        <td> {{record.Potential_Capacity_MW}} </td>
+                        <td> {{record.Unit_Production.Unit_Code}} </td>
+                        <td> {{record.Current_Production_In_MW}} </td>
+                        <td> {{record.Generating_Company}} </td>
 
-                    <td class="d-flex">
-                        <div class="btn">
-                            <a class="" id="delete_record" onclick="confirmDelete('{{record.id}}')"><i
-                                    class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
+                        <td class="d-flex">
+                            <div class="btn">
+                                <a class="" id="delete_record" onclick="confirmDelete('{{record.id}}')"><i
+                                        class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
 
-                        </div>
-                        <div class="btn ">
-                            <a class="" href="{% url 'update_education_record' record.id %}"><i
-                                    class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                            </div>
+                            <div class="btn ">
+                                <a class="" href="{% url 'update_energy_record' record.id %}"><i
+                                        class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="pagination m-3 d-flex justify-content-center">
+        <span class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3">
+            {% if page.has_previous %}
+            <a href="?page=1
+            {% if request.GET.power_code %}&power_code={{ request.GET.power_code }}{% endif %}
+
+            {% if request.GET.country %}&country={{ request.GET.country }}{% endif %}
+            
+            {% if request.GET.potential_unit %}&potential_unit={{ request.GET.potential_unit }}{% endif %}
+            
+            {% if request.GET.unit_production %}&unit_production={{ request.GET.unit_production }}{% endif %}
+            ">
+                &laquo; First
+            </a>
+            <a href="?page={{page.previous_page_number}}
+            {% if request.GET.power_code %}&power_code={{ request.GET.power_code }}{% endif %}
+
+            {% if request.GET.country %}&country={{ request.GET.country }}{% endif %}
+            
+            {% if request.GET.potential_unit %}&potential_unit={{ request.GET.potential_unit }}{% endif %}
+            
+            {% if request.GET.unit_production %}&unit_production={{ request.GET.unit_production }}{% endif %}">
+                Previous
+            </a>
+            {% endif %}
+
+            <span class="current-page">
+                Page {{ page.number }} of {{ page.paginator.num_pages }}.
+            </span>
+
+            {% if page.has_next %}
+            <a href="?page={{page.next_page_number}}
+            {% if request.GET.power_code %}&power_code={{ request.GET.power_code }}{% endif %}
+
+            {% if request.GET.country %}&country={{ request.GET.country }}{% endif %}
+            
+            {% if request.GET.potential_unit %}&potential_unit={{ request.GET.potential_unit }}{% endif %}
+            
+            {% if request.GET.unit_production %}&unit_production={{ request.GET.unit_production }}{% endif %}">
+                Next
+            </a>
+            <a href="?page={{ page.paginator.num_pages }}
+            {% if request.GET.power_code %}&power_code={{ request.GET.power_code }}{% endif %}
+
+            {% if request.GET.country %}&country={{ request.GET.country }}{% endif %}
+            
+            {% if request.GET.potential_unit %}&potential_unit={{ request.GET.potential_unit }}{% endif %}
+            
+            {% if request.GET.unit_production %}&unit_production={{ request.GET.unit_production }}{% endif %}">
+                Last &raquo;
+            </a>
+            {% endif %}
+        </span>
     </div>
 </form>
+
+<script>
+    function confirmDelete(itemId) {
+        var result = confirm("Are you sure you want to delete this record?");
+        if (result) {
+            window.location.href = 'delete_energy_record/' + itemId + '/';
+        } else {
+            alert("Delete canceled!");
+        }
+    }
+
+    function confirmDeleteAll() {
+        var confirmDelete = confirm(
+            "Are you sure you want to delete all selected items?"
+        );
+        if (confirmDelete) {
+            document.getElementById("delete-form").submit();
+        }
+    }
+</script>
 {% endif %}
 
 {% endblock content %}
