change energy table column names

--- a/databank/general_data/templates/general_data/energy_templates/energy_table.html
+++ b/databank/general_data/templates/general_data/energy_templates/energy_table.html
@@ -109,7 +109,7 @@
                         </th>
                         <th class="text-white fst-normal  " scope="col"
                             style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                            Energy_Type
+                            Energy Type
                         </th>
                         <th class="text-white fst-normal  " scope="col"
                             style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
