show type in crime code dropdown

--- a/databank/general_data/templates/general_data/crime_templates/crime_table.html
+++ b/databank/general_data/templates/general_data/crime_templates/crime_table.html
@@ -54,7 +54,7 @@
                         <option selected>--</option>
                         {% for crime in crime_code %}
                         <option value="{{crime.id}}">
-                            {{crime}} - {{crime.Name}}
+                            {{crime}}
                         </option>
                         {% endfor %}
                     </select>
