change column names

--- a/databank/general_data/templates/general_data/climate_templates/climate_table.html
+++ b/databank/general_data/templates/general_data/climate_templates/climate_table.html
@@ -150,17 +150,17 @@
 
                             <th class="text-white fst-normal  " scope="col"
                                 style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                                Temperature_Unit
+                                Temperature Unit
                             </th>
     
                             <th class="text-white fst-normal  " scope="col"
                                 style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                                Max_Temperature
+                                Max Temperature
                             </th>
     
                             <th class="text-white fst-normal  " scope="col"
                                 style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                                Min_Temperature
+                                Min Temperature
                             </th>
                             <th class="text-white fst-normal  " scope="col"
                                 style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
@@ -168,7 +168,7 @@
                             </th>
                             <th class="text-white fst-normal  " scope="col"
                                 style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                                Climate_Unit
+                                Climate Unit
                             </th>
                             <th class="text-white fst-normal  " scope="col"
                                 style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
