fix climate table column names

--- a/databank/general_data/templates/general_data/climate_templates/climate_table.html
+++ b/databank/general_data/templates/general_data/climate_templates/climate_table.html
@@ -188,7 +188,7 @@
                             </td>
                             <td> {{record.Country.Country_Name}} </td>
                             <td> {{record.Date}} </td>
-                            <td>{{record.Place}}</td>
+                            <td>{{record.Place.Place_Code}}</td>
                             <td>{{record.Place.Place_Name}}</td>
                             <td>{{record.Temperature_Unit}}</td>
                             <td>{{record.Max_Temperature}}</td>
