display soc group column in occupation table

--- a/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
+++ b/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
@@ -120,6 +120,11 @@
                             style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
                              SOC Title
                         </th>
+                        
+                        <th class="text-white fst-normal  " scope="col"
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
+                             SOC Group
+                        </th>
 
                         <th class="text-white fst-normal  " scope="col"
                             style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
@@ -143,6 +148,7 @@
                             <td> {{record.Year}} </td>
                             <td> {{record.Code}} </td>
                             <td> {{record.Code.SOC_Title}} </td>
+                            <td> {{record.Code.SOC_Group}} </td>
                             <td> {{record.Number}} </td>
                             <td class="d-flex">
                                 <div class="btn">
