--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -91,6 +91,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_energy_excel' %}">Upload Energy Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_index_excel' %}">Upload Index Data</a>
+              </li>
             </ul>
           </li>
 
