--- a/databank/general_data/templates/general_data/road_templates/road_table.html
+++ b/databank/general_data/templates/general_data/road_templates/road_table.html
@@ -173,6 +173,9 @@
             <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
                 Highway_No
             </th>
+            <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
+              Name_Of_The_Road
+            </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Code_Type_Of_The_Road
             </th>
@@ -205,6 +208,7 @@
             <td >{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
             <td>{{ record.Highway_No }}</td>
+            <td>{{ record.Name_Of_The_Road }}</td>
             <td>{{ record.Code_Type_Of_Road.Code }}</td>
             <td>{{ record.Code_Type_Of_Road.Road_Type }}</td>
             <td>{{ record.Length_Unit_Options}}</td>
