export index excel

--- a/databank/general_data/templates/general_data/index_templates/index_table.html
+++ b/databank/general_data/templates/general_data/index_templates/index_table.html
@@ -56,7 +56,7 @@
                     <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
                     <span>Delete Selected</span>
                 </button>
-                <a href="{% url 'export_energy_excel' %}?{{ request.GET.urlencode }}" class="border p-2 styled-link">
+                <a href="{% url 'export_index_excel' %}?{{ request.GET.urlencode }}" class="border p-2 styled-link">
                     <i class="fa-solid fa-table"></i>
                     <span class="fw-normal">Export to Excel</span>
                 </a>
