download selected excel

--- a/databank/general_data/templates/general_data/index_templates/index_table.html
+++ b/databank/general_data/templates/general_data/index_templates/index_table.html
@@ -182,7 +182,7 @@
     }
 
     function updateSelected(itemId) {
-        document.getElementById("delete-form").action = "{% url 'update_selected_energy' %}";
+        document.getElementById("delete-form").action = "{% url 'update_selected_index' %}";
         document.getElementById("delete-form").submit();
     }
 
