add publication to navigation

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -94,6 +94,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_index_excel' %}">Upload Index Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_publication_excel' %}">Upload Publication Data</a>
+              </li>
             </ul>
           </li>
 
