export selected publication data

--- a/databank/general_data/templates/general_data/publication_templates/publication_table.html
+++ b/databank/general_data/templates/general_data/publication_templates/publication_table.html
@@ -184,7 +184,7 @@
     }
 
     function updateSelected(itemId) {
-        document.getElementById("delete-form").action = "{% url 'update_selected_energy' %}";
+        document.getElementById("delete-form").action = "{% url 'update_selected_publication' %}";
         document.getElementById("delete-form").submit();
     }
 
