--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -97,6 +97,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_publication_excel' %}">Upload Publication Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_budget_excel' %}">Upload Budgetary Data</a>
+              </li>
             </ul>
           </li>
 
