--- a/databank/general_data/templates/general_data/budget_templates/budget_table.html
+++ b/databank/general_data/templates/general_data/budget_templates/budget_table.html
@@ -113,7 +113,7 @@
 
                             </div>
                             <div class="btn ">
-                                <a class="" href="{% url 'update_publication_record' record.id %}"><i
+                                <a class="" href="{% url 'update_budget_record' record.id %}"><i
                                         class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
                             </div>
                         </td>
