--- a/databank/general_data/templates/general_data/budget_templates/budget_table.html
+++ b/databank/general_data/templates/general_data/budget_templates/budget_table.html
@@ -162,7 +162,7 @@
     function confirmDelete(itemId) {
         var result = confirm("Are you sure you want to delete this record?");
         if (result) {
-            window.location.href = 'delete_publication_record/' + itemId + '/';
+            window.location.href = 'delete_budget_record/' + itemId + '/';
         } else {
             alert("Delete canceled!");
         }
