--- a/databank/general_data/templates/general_data/budget_templates/budget_table.html
+++ b/databank/general_data/templates/general_data/budget_templates/budget_table.html
@@ -41,7 +41,7 @@
     No Records
 </div>
 {% else %}
-<form action="{% url 'delete_selected_publication' %}" method="post" id="delete-form">
+<form action="{% url 'delete_selected_budget' %}" method="post" id="delete-form">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light p-3">
         <div class="d-flex align-items-center justify-content-between px-2">
