export selected budget records

--- a/databank/general_data/templates/general_data/budget_templates/budget_table.html
+++ b/databank/general_data/templates/general_data/budget_templates/budget_table.html
@@ -169,7 +169,7 @@
     }
 
     function updateSelected(itemId) {
-        document.getElementById("delete-form").action = "{% url 'update_selected_publication' %}";
+        document.getElementById("delete-form").action = "{% url 'update_selected_budget' %}";
         document.getElementById("delete-form").submit();
     }
 
