--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -100,6 +100,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_budget_excel' %}">Upload Budgetary Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_production_excel' %}">Upload Production Data</a>
+              </li>
             </ul>
           </li>
 
