--- a/databank/general_data/templates/general_data/production_templates/production_table.html
+++ b/databank/general_data/templates/general_data/production_templates/production_table.html
@@ -118,7 +118,7 @@
 
                             </div>
                             <div class="btn ">
-                                <a class="" href="{% url 'update_energy_record' record.id %}"><i
+                                <a class="" href="{% url 'update_production_record' record.id %}"><i
                                         class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
                             </div>
                         </td>
