--- a/databank/general_data/templates/general_data/production_templates/production_table.html
+++ b/databank/general_data/templates/general_data/production_templates/production_table.html
@@ -160,6 +160,30 @@
         </span>
     </div>
 </form>
+<script>
+    function confirmDelete(itemId) {
+        var result = confirm("Are you sure you want to delete this record?");
+        if (result) {
+            window.location.href = 'delete_production_record/' + itemId + '/';
+        } else {
+            alert("Delete canceled!");
+        }
+    }
+
+    function updateSelected(itemId) {
+        document.getElementById("delete-form").action = "{% url 'update_selected_budget' %}";
+        document.getElementById("delete-form").submit();
+    }
+
+    function confirmDeleteAll() {
+        var confirmDelete = confirm(
+            "Are you sure you want to delete all selected items?"
+        );
+        if (confirmDelete) {
+            document.getElementById("delete-form").submit();
+        }
+    }
+</script>
 {% endif %}
 
 
