export selected production records

--- a/databank/general_data/templates/general_data/production_templates/production_table.html
+++ b/databank/general_data/templates/general_data/production_templates/production_table.html
@@ -171,7 +171,7 @@
     }
 
     function updateSelected(itemId) {
-        document.getElementById("delete-form").action = "{% url 'update_selected_budget' %}";
+        document.getElementById("delete-form").action = "{% url 'update_selected_production' %}";
         document.getElementById("delete-form").submit();
     }
 
